# codex

./: .codespellignore
.github/workflows/: build-codex-mgr.yml  rust-release.yml
codex-cli/scripts/: install_native_deps.py
codex-rs/: Cargo.toml  mock_upstream_def.py  mock_upstream_sha.py  test_default_pool_simple.sh  test_default_shadow.sh  test_dynamic_updates.sh  test_hot_reload.sh
codex-rs/codex-client/: Cargo.toml
codex-rs/login/: Cargo.toml
codex-rs/mgr/: Cargo.toml
codex-rs/mgr/src/: account_token_provider.rs  accounts.rs  app.rs  config.rs  default_pool_labels.rs  gateway.rs  gateway_sessions.rs  header_policy.rs  label.rs  layout.rs  lib.rs  main.rs  observability.rs  pools.rs  proxy.rs  redis_conn.rs  routing.rs  run_cmd.rs  serve.rs  state.rs  time.rs  upstream.rs  usage.rs  websocket_proxy.rs  ws_header_policy.rs
docs/: codex_mgr_cli_user_stories.md  install.md  multi_account_gateway.md  multi_account_gateway_plan.md
mgr-docs/: README.md  spec-v1.md
scripts/: call_chatgpt_backend.py  codex-shim
