[package]
name = "codex-mgr"
edition.workspace = true
license.workspace = true
version.workspace = true

[[bin]]
name = "codex-mgr"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true, default-features = false, features = ["http1", "tokio"] }
base64 = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
codex-backend-client = { workspace = true }
codex-core = { workspace = true }
codex-protocol = { workspace = true }
dirs = { workspace = true }
futures = { workspace = true }
rand = { workspace = true }
redis = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread", "signal", "time"] }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
